used interfaces for services and added yaml